Fix 'content not focusable in scroll region' by adding whitespace to 'pre' code blocks

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -149,7 +149,7 @@ pre {
   border-radius: var(--border-radius-s);
   font-size: var(--text-xs);
   padding: var(--spacing-m) var(--spacing-m);
-  overflow-x: auto;
+  white-space: pre-wrap;
 
   code {
     all: unset;
